Scrollbar fix

--- a/css/Contact.css
+++ b/css/Contact.css
@@ -1,4 +1,6 @@
-
+body{
+  overflow:inherit;
+}
 .contact-form-wrapper {
     display: table;
     margin-left: auto;
