--- a/css/Register & Login.css
+++ b/css/Register & Login.css
@@ -1,3 +1,7 @@
+body{
+  overflow:inherit;
+}
+
 /*Login*/
 .Login-form-wrapper {
     display: table;
